--- a/HW2-2.html
+++ b/HW2-2.html
@@ -3,5 +3,5 @@
     <title>Japanika Restaurant Website</title>
 </head>
 <body>
-    
+    <div id="logoAndHead">***Picture*** Welcome to Japanika house of assian kitchen</div>
 </body>
