connect HTML to CSS

--- a/HW2-2.html
+++ b/HW2-2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Japanika Restaurant Website</title>
+    <link rel="stylesheet" type="text/css" href="HW2-CSS.css">
 </head>
 <body>
     <div id="logoAndHead">***Picture*** Welcome to Japanika house of assian kitchen</div>
