double row HW2-2.html

--- a/HW2-2.html
+++ b/HW2-2.html
@@ -5,4 +5,5 @@
 </head>
 <body>
     <div id="logoAndHead">***Picture*** Welcome to Japanika house of assian kitchen</div>
+    <div id="logoAndHead">***Picture*** Welcome to Japanika house of assian kitchen</div>
 </body>
